--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "keywords": [
     "react-native",
+    "react-components",
+    "react-component",
     "react-native-router-flux",
     "ios",
     "navigation"
