--- a/Example/package.json
+++ b/Example/package.json
@@ -4,12 +4,32 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "sync": "rm -rf ./node_modules/react-native-router-native; sane '/usr/bin/rsync -v -a --exclude .git --exclude Example --exclude node_modules ../ ./node_modules/react-native-router-native/' .. --glob='{**/*.json,**/*.js}'"
+    "test": "jest"
   },
   "dependencies": {
-    "react": "15.2.1",
-    "react-native": "0.31.0",
-    "react-native-button": "^1.6.0",
-    "react-native-router-native": "file:../"
+    "autobind-decorator": "^1.4.1",
+    "mobx": "^3.1.16",
+    "mobx-react": "^4.2.1",
+    "react-native-button": "^2.0.0",
+    "react-navigation": "^1.0.0-beta.11",
+    "react-native-router-flux": "4.0.0-alpha.1",
+    "react": "16.0.0-alpha.6",
+    "react-native": "0.44.0"
+  },
+  "devDependencies": {
+    "babel-jest": "20.0.3",
+    "babel-preset-react-native": "2.0.0",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "jest": "20.0.4",
+    "react-test-renderer": "16.0.0-alpha.12"
+  },
+  "jest": {
+    "preset": "react-native",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-navigation)"
+    ],
+    "setupFiles": [
+      "./test/setup.js"
+    ]
   }
 }
