--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-native-router-native",
-  "version": "0.2.2",
-  "description": "Easy native navigation with react-native-controllers (forked) and declarative RNRF syntax (react-native-router-flux) (iOS is supported at this time)",
+  "version": "4.0.0-alpha.2",
+  "description": "react-native-router-flux syntax based on new ReactNavigation API",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
