--- a/package.json
+++ b/package.json
@@ -1,30 +1,47 @@
 {
   "name": "react-native-router-native",
-  "version": "4.0.0-alpha.2",
-  "description": "react-native-router-flux syntax based on new ReactNavigation API",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "version": "4.0.0-alpha.3",
+  "description": "React Native Router using Flux architecture",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aksonov/react-native-router-native.git"
+    "url": "https://github.com/aksonov/react-native-router-flux"
   },
-  "keywords": [
-    "react-native",
-    "react-components",
-    "react-component",
-    "react-native-router-flux",
-    "ios",
-    "navigation"
-  ],
-  "author": "Pavlo Aksonov",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/aksonov/react-native-router-native/issues"
+  "main": "index.js",
+  "scripts": {
+    "start": "node node_modules/react-native/local-cli/cli.js start",
+    "test": "jest"
   },
-  "homepage": "https://github.com/aksonov/react-native-router-native#readme",
   "dependencies": {
-    "react-native-ios-controllers": "^2.1.41"
+    "autobind-decorator": "^1.4.1",
+    "mobx": "^3.1.16",
+    "mobx-react": "^4.2.1",
+    "react-native-button": "^2.0.0",
+    "react-navigation": "^1.0.0-beta.11"
+  },
+  "devDependencies": {
+    "babel-jest": "20.0.3",
+    "babel-preset-react-native": "2.0.0",
+    "babel-preset-react-native-stage-0": "^1.0.1",
+    "eslint": "^4.0.0",
+    "jest": "20.0.4",
+    "react": "16.0.0-alpha.12",
+    "react-native": "0.45.1",
+    "react-test-renderer": "16.0.0-alpha.12"
+  },
+  "peerDependencies": {
+    "react": "*",
+    "react-native": "*"
+  },
+  "jest": {
+    "preset": "react-native",
+    "modulePathIgnorePatterns": [
+      "<rootDir>/Example/"
+    ],
+    "transformIgnorePatterns": [
+      "node_modules/(?!(jest-)?react-native|react-navigation)"
+    ],
+    "setupFiles": [
+      "./test/setup.js"
+    ]
   }
 }
